# logicapps-lint

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  deny.toml  dist-workspace.toml
.github/workflows/: ci.yml  release.yml
scripts/: pin-release-yml.sh
src/: arm.rs  check.rs  diagnostic.rs  human.rs  json.rs  lib.rs  main.rs  path_utils.rs  strictness.rs  wdl.rs  workflow.rs
src/arm/: eval.rs  format.rs  json_fragments.rs  syntax.rs
src/check/: project.rs  references.rs  shape.rs
src/check/project/: arm.rs  connections.rs  expressions.rs  files.rs  parameters.rs  template.rs  types.rs
src/check/project/arm/: definitions.rs  detect.rs  diagnostics.rs  nested.rs  parameters.rs  resources.rs  values.rs
src/check/references/: arm.rs  parameters.rs  run_after.rs  scope.rs  tracked.rs  variables.rs
src/check/shape/: actions.rs  arm_boundary.rs  common.rs  content_transfer.rs  ctx.rs  definition_io.rs  dynamic_wdl.rs  field_validators.rs  http.rs  http_uri.rs  limits.rs  materialized.rs  numbers.rs  operation_options.rs  operations.rs  registry.rs  required_fields.rs  root.rs  run_after.rs  runtime.rs  secure_data.rs  static_results.rs  time.rs  triggers.rs
src/check/shape/actions/: agent.rs  connectors.rs  control.rs  data.rs  integration.rs  variables.rs
src/check/shape/triggers/: batch.rs  date.rs  (+5 more)
src/wdl/: arity.rs  functions.rs  lex.rs  references.rs  segments.rs  syntax.rs  value.rs
src/workflow/: actions.rs  arm_support.rs  extraction.rs  parameters.rs  run_after.rs  strings.rs  triggers.rs  variables.rs
tests/: cli.rs  fixtures.rs
(+1079 files in other folders)
